# storm_software_2026

./: .gitignore  README.md  Storm2026Jumpstart.ino  calibration_matrix.txt  constants.toml  distortion_coefficients.txt  robot.py  setup.sh
AprilTag/: AprilTagPoses.py  Storm.json
AprilTagTesting/: Again.py  AprilTest.py  Calibration.py  Storm.json  almost_real.py  different_multi.py  global_multitag.py  global_test.py  global_v2.py  test.py
Controller_Client/: controller_client.py
base_station/: AprilTagPoses.py  StormGUI.html  StormGUI.py  controller_client.py  launch.sh  pink-blush-vision-dual-camera.html  run_base_station.sh  setup.sh  storm_logging.py
base_station/client/: script.js
base_station/controller_input/: controller.cpp
base_station/fms/: fms.cpp
base_station/match_info/: match_info.cpp
client/: index.html  script.js  styles.css
constants/: constants.py
daniel_testing/: command_framework.py  command_robot.py  controller.py  driver_camera.py  drivetrain  intake  robot.py  run_robot.sh  scorer
daniel_testing/autonomous/: jumpstart_auto.py
firmware/: STORM26-Firmware.ino  Storm2026Jumpstart.ino
firmware/STORM26-Firmware/: STORM26-Firmware.ino
firmware/StormLib/: Encoder.pio  MecanumDrive.hpp  SparkMini.hpp  StormBus.hpp  StormLib.ino  StormMessage.hpp
firmware/drive_board/: Configuration.hpp  MecanumDrive.hpp  QuadratureEncoder.hpp  SPARKmini.hpp  drive_board.ino
firmware/drive_board/.theia/: settings.json
firmware/sparkmini_test/: sparkmini_test.ino
launch/: launch  launch.cpp  launch.sh  nohup.out
local_motor_control/: local_serial_control2.py  main.py  mech_pi.py  mech_pico.py  motor_control_2wheels.py  server_pi.py
robot/: AprilTagPoses.py  apriltag_camera.py  bench_test.py  controller_client.py  driver_camera.py  robot.py  run_robot.sh  setup.sh  statistics.py  storm_logging.py  test_mode.sh
robot/control/: local_manual.cpp  serial.cpp
robot/firmware/: main.cpp
robot/firmware/simple_motor_test/: simple_motor_test.ino
robot/hardware/: pico.cpp
robot/software/: CMakeLists.txt  autonomous.cpp  hardware_interface.cpp  logging.cpp  main.cpp  manual.py  vision.py
score_analysis/: analysis.py  graphs.py  kilojoules.py  monte_carlo.py  simulator.py
ws_server/: CMakeLists.txt
ws_server/src/: asio_coro.cpp  client1.cpp  client2.cpp  example_client.cpp  example_server.cpp  hello_world.cpp  hv_client.cpp  hv_server.cpp  message_header.h  my_client.cpp  my_server.cpp  relay_server.cpp
